# bio-sfm-trust-core

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/bio_sfm_trust/: __init__.py  actions.py  adapters.py  calibration.py  conformal.py  gate.py  io_utils.py  metrics.py  providers.py  scoring.py
tests/: test_actions.py  test_calibration.py  test_calibration_invariants.py  test_conformal.py  test_gate.py  test_metrics.py  test_release_surface.py  test_scoring.py
