[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-sfm-trust"
version = "0.2.0"
description = "Pure-Python calibrated trust routing and split learn-then-test certification for LLM orchestration over science foundation models."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "JangKeun Kim" }]
keywords = ["calibration", "trust-routing", "foundation-models", "ai-for-science", "isotonic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Pure standard library — no runtime dependencies. Installs and tests with no GPU/weights/network.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.94.0,<1.0.0"]
dev = [
    "build>=1.2.0,<2.0.0",
    "cffconvert>=2.0.0,<3.0.0",
    "pytest>=8.0.0,<10.0.0",
    "ruff==0.15.21",
    "twine>=5.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/jang1563/bio-sfm-trust-core"
Repository = "https://github.com/jang1563/bio-sfm-trust-core"
Issues = "https://github.com/jang1563/bio-sfm-trust-core/issues"
Changelog = "https://github.com/jang1563/bio-sfm-trust-core/blob/main/CHANGELOG.md"
"Upstream (audit)" = "https://github.com/jang1563/bio-sfm-trust-audit"
"Downstream application" = "https://github.com/jang1563/bio_sfm_designer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "C4"]
